# DesignPattern

./: .gitignore  CMakeLists.txt  main.cpp
AbstractFactory/: CMakeLists.txt  ComputerFactory.cpp  PersonalComputerFactory.cpp  ServerFactory.cpp  TestAbstractFactoryPattern.cpp
AbstractFactory/include/: ComputerAbstractFactory.h  ComputerFactory.h  PersonalComputerFactory.h  ServerFactory.h  TestAbstractFactoryPattern.h
AbstractFactory/test/: CMakeLists.txt  ComputerAbstractFactory_test.cpp  ComputerFactory_test.cpp
AdapterPattern/: CMakeLists.txt  Socket.cpp  SocketClassAdapterImpl.cpp  SocketObjectAdapterImpl.cpp  TestAdapterPattern.cpp  Volt.cpp
AdapterPattern/include/: Socket.h  SocketAdapter.h  SocketClassAdapterImpl.h  SocketObjectAdapterImpl.h  TestAdapterPattern.h  Volt.h
AdapterPattern/test/: CMakeLists.txt  Socket_test.cpp  Volt_test.cpp
BridgePattern/: AbstractShape.cpp  CMakeLists.txt  GreenColor.cpp  Pentagon.cpp  Rectangle.cpp  RedColor.cpp  TestBridgePattern.cpp
BridgePattern/include/: AbstractShape.h  ColorInterface.h  GreenColor.h  Pentagon.h  Rectangle.h  RedColor.h  TestBridgePattern.h
BuilderPattern/: CMakeLists.txt  Computer.cpp  TestBuilderPattern.cpp
BuilderPattern/include/: Builder.h  Computer.h  TestBuilderPattern.h
BuilderPattern/test/: CMakeLists.txt  ComputerBuilder_test.cpp  Computer_test.cpp  Test1_test.cpp
ChainOfResponsibilityPattern/: ATMDispenseChain.cpp  CMakeLists.txt  Currency.cpp  Dollar10Dispense.cpp  Dollar20Dispense.cpp  Dollar50Dispense.cpp  TestChainOfResponsibilityPattern.cpp
ChainOfResponsibilityPattern/include/: ATMDispenseChain.h  Currency.h  DispenseChainInterface.h  Dollar10Dispense.h  Dollar20Dispense.h  Dollar50Dispense.h  TestChainOfResponsibilityPattern.h
CompositePattern/: CMakeLists.txt  Circle.cpp  Drawing.cpp  TestCompositePattern.cpp  Triangle.cpp
CompositePattern/include/: Circle.h  Drawing.h  Shape.h  TestCompositePattern.h  Triangle.h
FactoryPattern/: CMakeLists.txt  ComputerFactory.cpp  PersonalComputer.cpp  ServerComputer.cpp  TestFactoryPattern.cpp
FactoryPattern/include/: ComputerFactory.h  ComputerInterface.h  PersonalComputer.h  ServerComputer.h  TestFactoryPattern.h
FactoryPattern/test/: CMakeLists.txt  ComputerFactory_test.cpp  PersonalComputer_test.cpp  ServerComputer_test.cpp
PrototypePattern/: CMakeLists.txt  Employees.cpp  TestPrototypePattern.cpp
PrototypePattern/include/: Employees.h  TestPrototypePattern.h
PrototypePattern/test/: Employees_test.cpp
SingletonPattern/: CMakeLists.txt  Singleton.cpp  TestSingletonPattern.cpp
SingletonPattern/include/: Singleton.h  TestSingletonPattern.h
SingletonPattern/test/: CMakeLists.txt  Singleton_test.cpp
StrategyPattern/: CMakeLists.txt  CreditCardStrategy.cpp  Item.cpp  PaypalStrategy.cpp  ShoppingCart.cpp  TestStrategyPattern.cpp
StrategyPattern/include/: CreditCardStrategy.h  Item.h  PaymentStrategy.h  PaypalStrategy.h  ShoppingCart.h  TestStrategyPattern.h
TemplatePattern/: CMakeLists.txt  GlassHouse.cpp  HouseTemplate.cpp  TestTemplatePattern.cpp  WoodenHouse.cpp
TemplatePattern/include/: GlassHouse.h  HouseTemplate.h  TestTemplatePattern.h  WoodenHouse.h
TemplatePattern/test/: CMakeLists.txt  TestBuilderPattern_test.cpp
VisitorPattern/: Book.cpp  CMakeLists.txt  Fruit.cpp  ShoppingCartClient.cpp  ShoppingCartVisitorImpl.cpp  TestVisitorPattern.cpp
VisitorPattern/include/: Book.h  Fruit.h  ItemElementInterface.h  ShoppingCartClient.h  ShoppingCartVisitorImpl.h  ShoppingCartVisitorInterface.h  TestVisitorPattern.h
