


add_library(abstractFactoryPattern STATIC)
target_sources(abstractFactoryPattern PRIVATE ComputerAbstractFactory.cpp)
target_sources(abstractFactoryPattern PRIVATE ComputerFactory.cpp)
target_sources(abstractFactoryPattern PRIVATE PersonalComputerFactory.cpp)
target_sources(abstractFactoryPattern PRIVATE ServerFactory.cpp)
target_sources(abstractFactoryPattern PRIVATE TestAbstractFactoryPattern.cpp)
target_include_directories(abstractFactoryPattern PUBLIC "include")

target_link_libraries(abstractFactoryPattern PUBLIC factoryPattern)

#add_subdirectory(test)
